// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Layout on variable media point view port: should on PC view port 1`] = `
<div
  className="layout m"
  data-testid="aim-ahead-layout"
  id="aim-ahead-layout"
/>
`;

exports[`Test Layout on variable media point view port: should on mobile view port 1`] = `
<div
  className="layout"
  data-testid="aim-ahead-layout"
  id="aim-ahead-layout"
/>
`;
